# transformers-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml  transformer.ipynb
src/commands/: download.py  generate.py  inspect_weights.py  list_models.py  server.py
src/models/: base.py  gpt2.py  llama.py  smollm2.py
src/utils/: activations.py  attention.py  hf.py  layers.py  norms.py
