[project]
name = "transformers-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "huggingface_hub>=0.28.0",
    "jax>=0.8.1",
    "jupyterlab-vim>=4.1.4",
    "numpy>=2.3.5",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[project.scripts]
transformer-from-scratch = "main:main"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
